--- a/.github/workflows/test_on_pr.yml
+++ b/.github/workflows/test_on_pr.yml
@@ -1,7 +1,7 @@
-name: Compile and release
+name: Compile and test against PR
 
 on:
-  push:
+  pull_request:
     branches: master
 
 jobs:
@@ -11,7 +11,6 @@ jobs:
       fail-fast: false
     permissions:
       contents: write
-    if: "!contains(github.event.head_commit.message, '[ci]')"
 
     steps:
       - uses: actions/checkout@v3
@@ -48,25 +47,3 @@ jobs:
             spcomp -w234 -O2 -v2 -i"scripting/include" -i".temp/include" -o"plugins/${plugin}.smx" "scripting/${plugin}.sp"
           done
         working-directory: ${{ env.SCRIPTS_PATH }}
-
-      - name: Install zip
-        uses: montudor/action-zip@v1
-
-      - name: Zip output
-        run: |
-          zip -qq -y -r ${{ github.event.repository.name }}-${{ steps.setup_sp.outputs.plugin-version }}.zip configs plugins scripting extensions gamedata translations data
-        working-directory: ${{ env.SCRIPTS_PATH }}
-
-      - name: Create Release
-        uses: ncipollo/release-action@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          tag: v${{ steps.setup_sp.outputs.plugin-version }}
-          artifacts: "./${{ github.event.repository.name }}-${{ steps.setup_sp.outputs.plugin-version }}.zip"
-          body: ${{ steps.changelog.outputs.changes }}
-          draft: false
-          allowUpdates: true
-          prerelease: false
-          replacesArtifacts: true
